apps/actual-budget/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-budget
  namespace: actual-budget
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: tailscale-gateway
      namespace: tailscale
      sectionName: https
  hostnames:
    - actual.sudhanva.me
  rules:
    - backendRefs:
        - name: actual-budget
          port: 5006
